<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="starterbtn">Entrées</string>
    <string name="dishbtn">Plats</string>
    <string name="dessertbtn">Desserts</string>
    <string name="startermsg">Starter pressed</string>
    <string name="dishmsg">Dish pressed</string>
    <string name="dessertmsg">Dessert pressed</string>

    <string name="categoryTitle"></string>

    <string name="moinsBtn">-</string>
    <string name="plusBtn">+</string>

    <string name="total">total</string>
    <string name="panier">panier</string>
    <string name="quantity">quantity</string>

    <string name="commandBtn">Passer commande</string>

    <string name="title">Création de votre compte</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="email">Email</string>
    <string name="password">Mot de Passe</string>
    <string name="signUpBtn">Créer votre compte</string>
    <string name="logInBtn">Se connecter</string>
    <string name="noAccount">Je n\'ai pas de compte</string>

    <string name="invalidForm">Veuillez remplir tous les champs</string>
    <string name="invalidLogin">Email ou Mot de passe invalide</string>
    <string name="paniertext">Votre Panier</string>


</resources>